tests/error/type_errors/if_not_bool_functional.py
from guppylang.decorator import guppy


@compile_guppy
def foo() -> int:
    _@functional
    if 42:
        return 0
    return 1
